--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-17 02:47 -->
+<!-- 2022-11-18 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgaef8d82">1. 妙妙文章</a>
+<li><a href="#org644a1cc">1. 妙妙文章</a>
 <ul>
-<li><a href="#org0cd9905">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org8e8bec3">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgc0ba514">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2c491c9">1.4. 关于编辑器</a></li>
-<li><a href="#org6601f4a">1.5. 关于代码</a>
+<li><a href="#org0b61c03">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgeaa8467">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org17f122c">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgacf3073">1.4. 关于编辑器</a></li>
+<li><a href="#orgea1e4ff">1.5. 关于代码</a>
 <ul>
-<li><a href="#orgb62b8a8">1.5.1. Lisp</a></li>
+<li><a href="#org0fcea02">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org2e21fe7">1.6. 关于CPU</a></li>
-<li><a href="#org34ff04b">1.7. 关于算法</a>
+<li><a href="#org65df294">1.6. 关于CPU</a></li>
+<li><a href="#orgb55f78c">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgd6424e8">1.7.1. 关于随机</a></li>
+<li><a href="#org8f1bb49">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org3220520">1.8. 关于AI</a></li>
-<li><a href="#orgc72aa41">1.9. 关于软件</a>
+<li><a href="#org7a4af41">1.8. 关于AI</a></li>
+<li><a href="#orgdcd2e2c">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgeaaa00b">1.9.1. SQLite</a></li>
+<li><a href="#org52a3295">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org31d1508">1.10. 关于workflow</a></li>
+<li><a href="#orgcd95683">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgcf6081d">2. 棒棒视频</a>
+<li><a href="#org3cf7fdc">2. 棒棒视频</a>
 <ul>
-<li><a href="#org05ba564">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org2f394ea">2.2. 各种剧</a></li>
-<li><a href="#orga9b1994">2.3. 电影</a></li>
+<li><a href="#org371cf0f">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org111acff">2.2. 各种剧</a></li>
+<li><a href="#orge77bd25">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org5e769c0">3. 快乐游戏</a></li>
-<li><a href="#org1b213ae">4. 宝藏博主</a></li>
-<li><a href="#orgdd07b89">5. 有意思的</a>
+<li><a href="#org7c947a9">3. 快乐游戏</a></li>
+<li><a href="#org96aa98f">4. 宝藏博主</a></li>
+<li><a href="#orgfb76de6">5. 有意思的</a>
 <ul>
-<li><a href="#org3d3712e">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orge5d1251">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orge1bfc96">6. 我想玩的</a></li>
+<li><a href="#org461175b">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgaef8d82" class="outline-2">
-<h2 id="orgaef8d82"><span class="section-number-2">1.</span> <a href="#orgaef8d82">妙妙文章</a></h2>
+<div id="outline-container-org644a1cc" class="outline-2">
+<h2 id="org644a1cc"><span class="section-number-2">1.</span> <a href="#org644a1cc">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org57ad08a">
+<figure id="org9969171">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org0cd9905" class="outline-3">
-<h3 id="org0cd9905"><span class="section-number-3">1.1.</span> <a href="#org0cd9905">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org0b61c03" class="outline-3">
+<h3 id="org0b61c03"><span class="section-number-3">1.1.</span> <a href="#org0b61c03">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org8e8bec3" class="outline-3">
-<h3 id="org8e8bec3"><span class="section-number-3">1.2.</span> <a href="#org8e8bec3">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgeaa8467" class="outline-3">
+<h3 id="orgeaa8467"><span class="section-number-3">1.2.</span> <a href="#orgeaa8467">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgc0ba514" class="outline-3">
-<h3 id="orgc0ba514"><span class="section-number-3">1.3.</span> <a href="#orgc0ba514">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org17f122c" class="outline-3">
+<h3 id="org17f122c"><span class="section-number-3">1.3.</span> <a href="#org17f122c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2c491c9" class="outline-3">
-<h3 id="org2c491c9"><span class="section-number-3">1.4.</span> <a href="#org2c491c9">关于编辑器</a></h3>
+<div id="outline-container-orgacf3073" class="outline-3">
+<h3 id="orgacf3073"><span class="section-number-3">1.4.</span> <a href="#orgacf3073">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org6601f4a" class="outline-3">
-<h3 id="org6601f4a"><span class="section-number-3">1.5.</span> <a href="#org6601f4a">关于代码</a></h3>
+<div id="outline-container-orgea1e4ff" class="outline-3">
+<h3 id="orgea1e4ff"><span class="section-number-3">1.5.</span> <a href="#orgea1e4ff">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb62b8a8" class="outline-4">
-<h4 id="orgb62b8a8"><span class="section-number-4">1.5.1.</span> <a href="#orgb62b8a8">Lisp</a></h4>
+<div id="outline-container-org0fcea02" class="outline-4">
+<h4 id="org0fcea02"><span class="section-number-4">1.5.1.</span> <a href="#org0fcea02">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org2e21fe7" class="outline-3">
-<h3 id="org2e21fe7"><span class="section-number-3">1.6.</span> <a href="#org2e21fe7">关于CPU</a></h3>
+<div id="outline-container-org65df294" class="outline-3">
+<h3 id="org65df294"><span class="section-number-3">1.6.</span> <a href="#org65df294">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org34ff04b" class="outline-3">
-<h3 id="org34ff04b"><span class="section-number-3">1.7.</span> <a href="#org34ff04b">关于算法</a></h3>
+<div id="outline-container-orgb55f78c" class="outline-3">
+<h3 id="orgb55f78c"><span class="section-number-3">1.7.</span> <a href="#orgb55f78c">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd6424e8" class="outline-4">
-<h4 id="orgd6424e8"><span class="section-number-4">1.7.1.</span> <a href="#orgd6424e8">关于随机</a></h4>
+<div id="outline-container-org8f1bb49" class="outline-4">
+<h4 id="org8f1bb49"><span class="section-number-4">1.7.1.</span> <a href="#org8f1bb49">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3220520" class="outline-3">
-<h3 id="org3220520"><span class="section-number-3">1.8.</span> <a href="#org3220520">关于AI</a></h3>
+<div id="outline-container-org7a4af41" class="outline-3">
+<h3 id="org7a4af41"><span class="section-number-3">1.8.</span> <a href="#org7a4af41">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc72aa41" class="outline-3">
-<h3 id="orgc72aa41"><span class="section-number-3">1.9.</span> <a href="#orgc72aa41">关于软件</a></h3>
+<div id="outline-container-orgdcd2e2c" class="outline-3">
+<h3 id="orgdcd2e2c"><span class="section-number-3">1.9.</span> <a href="#orgdcd2e2c">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgeaaa00b" class="outline-4">
-<h4 id="orgeaaa00b"><span class="section-number-4">1.9.1.</span> <a href="#orgeaaa00b">SQLite</a></h4>
+<div id="outline-container-org52a3295" class="outline-4">
+<h4 id="org52a3295"><span class="section-number-4">1.9.1.</span> <a href="#org52a3295">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org31d1508" class="outline-3">
-<h3 id="org31d1508"><span class="section-number-3">1.10.</span> <a href="#org31d1508">关于workflow</a></h3>
+<div id="outline-container-orgcd95683" class="outline-3">
+<h3 id="orgcd95683"><span class="section-number-3">1.10.</span> <a href="#orgcd95683">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcf6081d" class="outline-2">
-<h2 id="orgcf6081d"><span class="section-number-2">2.</span> <a href="#orgcf6081d">棒棒视频</a></h2>
+<div id="outline-container-org3cf7fdc" class="outline-2">
+<h2 id="org3cf7fdc"><span class="section-number-2">2.</span> <a href="#org3cf7fdc">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org05ba564" class="outline-3">
-<h3 id="org05ba564"><span class="section-number-3">2.1.</span> <a href="#org05ba564">Veritasium 真理元素</a></h3>
+<div id="outline-container-org371cf0f" class="outline-3">
+<h3 id="org371cf0f"><span class="section-number-3">2.1.</span> <a href="#org371cf0f">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -858,8 +858,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2f394ea" class="outline-3">
-<h3 id="org2f394ea"><span class="section-number-3">2.2.</span> <a href="#org2f394ea">各种剧</a></h3>
+<div id="outline-container-org111acff" class="outline-3">
+<h3 id="org111acff"><span class="section-number-3">2.2.</span> <a href="#org111acff">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga9b1994" class="outline-3">
-<h3 id="orga9b1994"><span class="section-number-3">2.3.</span> <a href="#orga9b1994">电影</a></h3>
+<div id="outline-container-orge77bd25" class="outline-3">
+<h3 id="orge77bd25"><span class="section-number-3">2.3.</span> <a href="#orge77bd25">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +910,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgec9c849">
+<figure id="orgddc5362">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +927,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5e769c0" class="outline-2">
-<h2 id="org5e769c0"><span class="section-number-2">3.</span> <a href="#org5e769c0">快乐游戏</a></h2>
+<div id="outline-container-org7c947a9" class="outline-2">
+<h2 id="org7c947a9"><span class="section-number-2">3.</span> <a href="#org7c947a9">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +958,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1b213ae" class="outline-2">
-<h2 id="org1b213ae"><span class="section-number-2">4.</span> <a href="#org1b213ae">宝藏博主</a></h2>
+<div id="outline-container-org96aa98f" class="outline-2">
+<h2 id="org96aa98f"><span class="section-number-2">4.</span> <a href="#org96aa98f">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +970,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org17b3eb6">
+<figure id="org47702b5">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +978,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgdd07b89" class="outline-2">
-<h2 id="orgdd07b89"><span class="section-number-2">5.</span> <a href="#orgdd07b89">有意思的</a></h2>
+<div id="outline-container-orgfb76de6" class="outline-2">
+<h2 id="orgfb76de6"><span class="section-number-2">5.</span> <a href="#orgfb76de6">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org3d3712e" class="outline-3">
-<h3 id="org3d3712e"><span class="section-number-3">5.1.</span> <a href="#org3d3712e">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orge5d1251" class="outline-3">
+<h3 id="orge5d1251"><span class="section-number-3">5.1.</span> <a href="#orge5d1251">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1024,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orge1bfc96" class="outline-2">
-<h2 id="orge1bfc96"><span class="section-number-2">6.</span> <a href="#orge1bfc96">我想玩的</a></h2>
+<div id="outline-container-org461175b" class="outline-2">
+<h2 id="org461175b"><span class="section-number-2">6.</span> <a href="#org461175b">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1048,7 +1048,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-17 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-18 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
