--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-17 02:47 -->
+<!-- 2022-11-18 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org717028d">1. What is Vectored IO</a></li>
-<li><a href="#org53cae25">2. Vectored IO in Linux</a></li>
-<li><a href="#org2a1ea27">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org58e7e89">4. Examples</a>
+<li><a href="#orgda1bf0e">1. What is Vectored IO</a></li>
+<li><a href="#orgb6c193d">2. Vectored IO in Linux</a></li>
+<li><a href="#org2eb5077">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#org3ffc77b">4. Examples</a>
 <ul>
-<li><a href="#orgd43c336">4.1. <code>write()</code></a></li>
-<li><a href="#orgecb1c43">4.2. <code>writev()</code></a></li>
+<li><a href="#orgaca730d">4.1. <code>write()</code></a></li>
+<li><a href="#orge902c36">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org717028d" class="outline-2">
-<h2 id="org717028d"><span class="section-number-2">1.</span> <a href="#org717028d">What is Vectored IO</a></h2>
+<div id="outline-container-orgda1bf0e" class="outline-2">
+<h2 id="orgda1bf0e"><span class="section-number-2">1.</span> <a href="#orgda1bf0e">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org53cae25" class="outline-2">
-<h2 id="org53cae25"><span class="section-number-2">2.</span> <a href="#org53cae25">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgb6c193d" class="outline-2">
+<h2 id="orgb6c193d"><span class="section-number-2">2.</span> <a href="#orgb6c193d">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org2a1ea27" class="outline-2">
-<h2 id="org2a1ea27"><span class="section-number-2">3.</span> <a href="#org2a1ea27">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org2eb5077" class="outline-2">
+<h2 id="org2eb5077"><span class="section-number-2">3.</span> <a href="#org2eb5077">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org58e7e89" class="outline-2">
-<h2 id="org58e7e89"><span class="section-number-2">4.</span> <a href="#org58e7e89">Examples</a></h2>
+<div id="outline-container-org3ffc77b" class="outline-2">
+<h2 id="org3ffc77b"><span class="section-number-2">4.</span> <a href="#org3ffc77b">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgd43c336" class="outline-3">
-<h3 id="orgd43c336"><span class="section-number-3">4.1.</span> <a href="#orgd43c336"><code>write()</code></a></h3>
+<div id="outline-container-orgaca730d" class="outline-3">
+<h3 id="orgaca730d"><span class="section-number-3">4.1.</span> <a href="#orgaca730d"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgecb1c43" class="outline-3">
-<h3 id="orgecb1c43"><span class="section-number-3">4.2.</span> <a href="#orgecb1c43"><code>writev()</code></a></h3>
+<div id="outline-container-orge902c36" class="outline-3">
+<h3 id="orge902c36"><span class="section-number-3">4.2.</span> <a href="#orge902c36"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-17 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-18 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
